# csci499_floan

./: .gitignore  CMakeLists.txt  README.md  go.mod  go.sum  make.sh
cli_tool/: CMakeLists.txt  main.cpp
protos/: caw.proto  faz.proto  store.proto  store_persistence.proto
protos/go_protos/caw/: caw.pb.go
protos/go_protos/faz/: faz.pb.go  faz_grpc.pb.go
src/: go.mod
src/caw/: caw.cpp
src/caw/client/: caw_client.cpp  caw_client.go  caw_client.h  faz_client.cpp  faz_client.h
src/caw/client/cpp_client/: caw_client.cpp  caw_client.h
src/caw/client/go_client/: caw_client.go
src/caw/functions/: caw_functions.cpp  caw_functions.h
src/cli_tool/: caw_cli.cpp  caw_cli.go
src/faz/: faz.cpp
src/faz/client/: faz_client.cpp  faz_client.go  faz_client.h
src/faz/client/cpp_client/: faz_client.cpp  faz_client.h
src/faz/client/go_client/: faz_client.go
src/faz/server/: faz_server.cpp  faz_server.h
src/key_value_store/: KeyValueStoreInterface.h  kv_store.cpp
src/key_value_store/client/: kvstore_client.cpp  kvstore_client.h
src/key_value_store/core/: KeyValueStore.cpp  KeyValueStore.h
src/key_value_store/server/: kvstore_server.cpp  kvstore_server.h  kvstore_server_runner.cpp
tests/: CawFunctionTests.cpp  KeyValueStorePersistenceTests.cpp  KeyValueStoreTests.cpp
